refactor and add commend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="label_cpu_work_rate">CPU total usage:</string>
     <string name="label_cpuunit">%</string>
     <string name="label_ok_btn">"Ok"</string>
+    <string name="alertdlg_title_info">Info:</string>
 
 </resources>
